syntax = "proto3";

package hub;

service Hub {
    rpc Ping(PingRequest) returns (PingReply) {}
    rpc List(ListRequest) returns (ListReply) {}
    rpc Info(InfoRequest) returns (InfoReply) {}

    rpc StartTask(StartTaskRequest) returns (StartTaskReply) {}
    rpc StopTask(StopTaskRequest) returns (StopTaskReply) {}
}

message PingRequest {
}

message PingReply {
    string status = 1;
}

message ListRequest {
}

message ListReply {
    message ListValue {
        repeated string values = 1;
    }
    map<string, ListValue> info = 1;
}

message InfoRequest {
}

message InfoReply {
}

message StartTaskRequest {
    string miner = 1;
    string registry = 2;
    string image = 3;
}

message StartTaskReply {
    string id = 1;
    repeated string endpoint = 2;
}

message StopTaskRequest {
    string id = 1;
}

message StopTaskReply {
}
